parser/tests/bad/expr01.st
% 'procedure' call cannot be an expression

procedure p()
  % empty
end p

const i := p()
